Change log for zeit.web
=======================

2.11 (unreleased)
-----------------

- Nothing changed yet.


2.10 (2015-10-02)
-----------------

- ZON-1936: Change bottom separator color in Spektrum parquet area

- HOTFIX: Repair old IE css reference

- ZON-2115: Antidote for keyword and topicpage special rules


2.9.2 (2015-10-01)
------------------

- HOTFIX: Fix annoying updated homepage refresh popover


2.9.1 (2015-10-01)
------------------

- ZON-2242: Remove cache-busting slug from font URLs

- OPS-239: Make newsfeed caching header configurable

- MAINT: Decrease timeout for login requests


2.9 (2015-10-01)
----------------

- ZON-2242: Globally configure image, asset and jsconf hosts

- MAINT: Add tests and more tracking to popover


2.8.2 (2015-09-30)
------------------

- FIX: Be more defensive in several places (byline, missing meta files, broken
  references etc.)


2.8.1 (2015-09-30)
------------------

- ZON-2262: Respect image expiration dates in cache-control headers

- ZON-2262: Do not include expired images in rendered pages

- FIX: Check for ICommonMetadata when building feed

- FIX: Add pagination to Advertorials


2.8 (2015-09-29)
----------------

- ZON-2281: Add full link to TOP link

- ZON-2263: Add Adcontroller tarpit/honeypot tracking script

- ZON-2252: Use product name instead of product id for indication of source

- ZON-2244: Fix indication of source in articles

- ZON-2218: Adjust timezone of displayed dates and fix indication of source

- ZON-2267: SEO pagetitle & -description shall trump anything else

- ZON-2266: Show empty buzzbox, if reach is down

- ZON-2259: Shorter caching for articles with unloadable comment thread

- FIX: total_pages TypeError (Bugsnag)

- CONFIG [hg only]: Change number of top-level-comments in config to 4


2.7 (2015-09-25)
----------------

- ZON-2074: Redirect `?commentstart` and `?page=all` to their proper locations

- FIX: Do not show article age on advertorial CP teasers
